# ml-training-2025

./: README.md  _config.yml  main.py  pyproject.toml
T01_python_installation/: windows.md
T02_basic_python/: S01_variables.ipynb
T03_class/: S01.ipynb  S02.ipynb  S03.ipynb  ex.ipynb  problem.ipynb  problem_sk.ipynb
T04_scikit_learn/: S01.ipynb  S01_workflow_minimal.ipynb  S02.ipynb  S02_params.ipynb  S03_workflow_automated.ipynb  S03_workflow_validation.ipynb  S04_data_2025-05-16_06-04.pkl  S04_data_2025-05-16_21-47.pkl  S04_data_2025-05-16_22-02.pkl  S04_data_2025-05-17_18-54.pkl  S04_data_2025-05-19_12-06.pkl  S04_workflow_real_fit.ipynb  S05.ipynb  S05_temp.ipynb  S05_workflow_real_analyze.ipynb  classes_v1.py  data_2025-05-13_07-05.pkl  data_2025-05-13_14-32.pkl  data_2025-05-13_14-41.pkl  data_2025-05-13_15-03.pkl  models.py
T04_scikit_learn/lecture_rev_1/: S01_lecture.ipynb  S01_test_load.ipynb
T04_scikit_learn/lecture_rev_2/: S02.ipynb  S03.ipynb  S04.ipynb  S05.ipynb
T05_project_setup/: S01_instruction.md  instruction.md
T05_project_setup/S01_project_example/: pyproject.toml
T05_project_setup/S01_project_example/src/ml_runner/: v1.py
T05_project_setup/S01_project_example/src/run/: S04_workflow_real_fit.ipynb  S05_workflow_real_analyze.ipynb
T06_mlp/: S04_data.ipynb  note.md  test2.ipynb  test3.ipynb
