[project]
name = "ml-training-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.4.1",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.11.8",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.7.0",
]
